--- a/gruop.conf
+++ b/gruop.conf
@@ -4,6 +4,80 @@ dns-server = 221.4.8.1, 223.5.5.5, 119.29.29.29, 101.6.6.6, 9.9.9.9, 116.62.218.
 udp-relay = true
 
 [Proxy]
+
+🇭🇰 香港实验性 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,10001,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇭🇰 香港高级 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,12001,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇭🇰 香港高级 IEPL 中继 2=ss,pregzdata1.anihpvhiv2333.xyz,12002,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇭🇰 香港高级 IEPL 中继 3=ss,pregzdata1.anihpvhiv2333.xyz,12003,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇭🇰 香港标准 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,11001,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇭🇰 香港标准 IEPL 中继 2=ss,pregzdata1.anihpvhiv2333.xyz,11002,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇭🇰 香港标准 IEPL 中继 3=ss,pregzdata1.anihpvhiv2333.xyz,11003,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇭🇰 香港标准 IEPL 中继 4=ss,pregzdata1.anihpvhiv2333.xyz,11004,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇭🇰 香港标准 IEPL 中继 5=ss,pregzdata1.anihpvhiv2333.xyz,11005,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇭🇰 香港标准 IEPL 中继 6=ss,pregzdata1.anihpvhiv2333.xyz,11006,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇭🇰 香港标准 IEPL 中继 7=ss,pregzdata1.anihpvhiv2333.xyz,11007,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇭🇰 香港标准 IEPL 中继 8=ss,pregzdata1.anihpvhiv2333.xyz,11008,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本实验性 IEPL 中继 1=ss,preshdata1.anihpvhiv2333.xyz,10002,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本高级 IEPL 中继 1=ss,preshdata1.anihpvhiv2333.xyz,12011,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本高级 IEPL 中继 2=ss,preshdata1.anihpvhiv2333.xyz,12012,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本高级 IEPL 中继 3=ss,preshdata1.anihpvhiv2333.xyz,12013,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本标准 IEPL 中继 1=ss,preshdata1.anihpvhiv2333.xyz,11011,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本标准 IEPL 中继 2=ss,preshdata1.anihpvhiv2333.xyz,11012,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本标准 IEPL 中继 3=ss,preshdata1.anihpvhiv2333.xyz,11013,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本标准 IEPL 中继 4=ss,preshdata1.anihpvhiv2333.xyz,11014,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本标准 IEPL 中继 5=ss,preshdata1.anihpvhiv2333.xyz,11015,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本标准 IEPL 中继 6=ss,preshdata1.anihpvhiv2333.xyz,11016,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本标准 IEPL 中继 7=ss,preshdata1.anihpvhiv2333.xyz,11017,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇯🇵 日本标准 IEPL 中继 8=ss,preshdata1.anihpvhiv2333.xyz,11018,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡实验性 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,10003,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡高级 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,12031,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡高级 IEPL 中继 2=ss,pregzdata1.anihpvhiv2333.xyz,12032,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡高级 IEPL 中继 3=ss,pregzdata1.anihpvhiv2333.xyz,12033,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,11031,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 2=ss,pregzdata1.anihpvhiv2333.xyz,11032,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 3=ss,pregzdata1.anihpvhiv2333.xyz,11033,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 4=ss,pregzdata1.anihpvhiv2333.xyz,11034,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 5=ss,pregzdata1.anihpvhiv2333.xyz,11035,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 6=ss,pregzdata1.anihpvhiv2333.xyz,11036,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 7=ss,pregzdata1.anihpvhiv2333.xyz,11037,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 8=ss,pregzdata1.anihpvhiv2333.xyz,11038,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾高级 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,12041,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾高级 IEPL 中继 2=ss,pregzdata1.anihpvhiv2333.xyz,12042,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾高级 IEPL 中继 3=ss,pregzdata1.anihpvhiv2333.xyz,12043,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾标准 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,11041,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾标准 IEPL 中继 2=ss,pregzdata1.anihpvhiv2333.xyz,11042,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾标准 IEPL 中继 3=ss,pregzdata1.anihpvhiv2333.xyz,11043,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国实验性 IEPL 中继 1=ss,preshdata1.anihpvhiv2333.xyz,10004,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国高级 IEPL 中继 1=ss,preshdata1.anihpvhiv2333.xyz,12021,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国高级 IEPL 中继 2=ss,preshdata1.anihpvhiv2333.xyz,12022,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国高级 IEPL 中继 3=ss,preshdata1.anihpvhiv2333.xyz,12023,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国标准 IEPL 中继 1=ss,preshdata1.anihpvhiv2333.xyz,11021,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国标准 IEPL 中继 2=ss,preshdata1.anihpvhiv2333.xyz,11022,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国标准 IEPL 中继 3=ss,preshdata1.anihpvhiv2333.xyz,11023,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国标准 IEPL 中继 4=ss,preshdata1.anihpvhiv2333.xyz,11024,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国标准 IEPL 中继 5=ss,preshdata1.anihpvhiv2333.xyz,11025,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国标准 IEPL 中继 6=ss,preshdata1.anihpvhiv2333.xyz,11026,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国标准 IEPL 中继 7=ss,preshdata1.anihpvhiv2333.xyz,11027,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇺🇸 美国标准 IEPL 中继 8=ss,preshdata1.anihpvhiv2333.xyz,11028,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡实验性 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,10003,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡高级 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,12031,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡高级 IEPL 中继 2=ss,pregzdata1.anihpvhiv2333.xyz,12032,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡高级 IEPL 中继 3=ss,pregzdata1.anihpvhiv2333.xyz,12033,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,11031,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 2=ss,pregzdata1.anihpvhiv2333.xyz,11032,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 3=ss,pregzdata1.anihpvhiv2333.xyz,11033,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 4=ss,pregzdata1.anihpvhiv2333.xyz,11034,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 5=ss,pregzdata1.anihpvhiv2333.xyz,11035,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 6=ss,pregzdata1.anihpvhiv2333.xyz,11036,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 7=ss,pregzdata1.anihpvhiv2333.xyz,11037,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇸🇬 新加坡标准 IEPL 中继 8=ss,pregzdata1.anihpvhiv2333.xyz,11038,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾高级 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,12041,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾高级 IEPL 中继 2=ss,pregzdata1.anihpvhiv2333.xyz,12042,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾高级 IEPL 中继 3=ss,pregzdata1.anihpvhiv2333.xyz,12043,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾标准 IEPL 中继 1=ss,pregzdata1.anihpvhiv2333.xyz,11041,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾标准 IEPL 中继 2=ss,pregzdata1.anihpvhiv2333.xyz,11042,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+🇨🇳 台湾标准 IEPL 中继 3=ss,pregzdata1.anihpvhiv2333.xyz,11043,encrypt-method=aes-128-gcm,password=Sj10bnYDe7w6V29E,obfs=http,obfs-host=d0f9c0b801.douyincdn.com
+
 🇭🇰WTT = ss, wtt.b.a, 44443, chacha20, sumsethan@wtt
 🇭🇰SSL-WTT = https, wtt.b.a, 34443, sumsethan, sumsethan@wtt
 🇭🇰HKT = ss, hkt.b.a, 54443, chacha20, sumsethan@hkt
@@ -19,8 +93,7 @@ DIRECT = direct
 Proxy = select, Shadowsocks, HTTPoverTLS
 CN = select, DIRECT, 🇨🇳电信, 🇨🇳联通, 🇨🇳移动
 ADblock = select, On, Off
-Shadowsocks = select, 🇭🇰HKT, 🇭🇰WTT
-HTTPoverTLS = select, 🇭🇰SSL-HKT, 🇭🇰SSL-WTT
+Shadowsocks = select, 🇭🇰 香港实验性 IEPL 中继 1, 🇭🇰 香港高级 IEPL 中继 1,  🇭🇰 香港高级 IEPL 中继 2,  🇭🇰 香港高级 IEPL 中继 3,  🇭🇰 香港高级 IEPL 中继 4,  🇭🇰 香港高级 IEPL 中继 5,  🇭🇰 香港高级 IEPL 中继 6,  🇭🇰 香港高级 IEPL 中继 7,  🇭🇰 香港高级 IEPL 中继 8,
 [Rule]
 # AD Block KEYWORD
 DOMAIN-KEYWORD,admarvel,ADblock
